--- a/.github/workflows/00-example-01.yaml
+++ b/.github/workflows/00-example-01.yaml
@@ -1,6 +1,7 @@
 name: 00 - github actions playground - Example 01
-run-name: ${{ github.actor }} Github Actions Playground
-#on: [push]
+on:
+  workflow_dispatch:
+  
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
