--- a/.github/workflows/04-mount-volume.yaml
+++ b/.github/workflows/04-mount-volume.yaml
@@ -17,4 +17,9 @@ jobs:
         run: echo "Este é um arquivo de teste gerado durante a execução do CI" > testfile.txt
 
       - name: Executar contêiner Docker
-        run: docker run -v ${{ github.workspace }}:/workspace alpine /bin/sh -c "pwd; ls -la /workspace"
+        run: |
+          docker run --rm -v "${{ github.workspace }}:/workspace" alpine /bin/sh -c "
+            echo 'Dentro do contêiner Docker';
+            pwd;
+            ls -la /workspace;
+          "
