--- a/.github/workflows/05-mount-using-action.yaml
+++ b/.github/workflows/05-mount-using-action.yaml
@@ -18,6 +18,6 @@ jobs:
         run: echo "Este é um arquivo de teste gerado durante a execução do CI" > testfile.txt
 
       - name: Use Docker Mount Workspace Action
-        uses: rmnobarra/github-actions-playground@main
+        uses: ./run-docker-container-with-volume/action.yaml
         with:
           PATH_TO_MOUNT: ${{ github.workspace }}
