--- a/.github/workflows/02-reusable-workflow.yaml
+++ b/.github/workflows/02-reusable-workflow.yaml
@@ -22,7 +22,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Display Input Message
-        run: echo "📝 Message: ${{ inputs.MESSAGE }}"
+        run: |
+          echo "📝 Message:"
+          echo "${{ inputs.MESSAGE }}"
 
       - name: List Files in the Repository
         run: ls -la
