--- a/.github/workflows/03-using-reusable-workflow.yaml
+++ b/.github/workflows/03-using-reusable-workflow.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   call-reusable:
     name: "Call Reusable Workflow"
-    uses: ./.github/workflows/reusable-workflow.yaml  # Referência ao reusable workflow
+    uses: ./.github/workflows/03-using-reusable-workflow.yaml
     with:
       MESSAGE: "Hello from the Main Workflow! 🚀"
       RUNNER: "ubuntu-latest"
