--- a/.github/workflows/00-example-01.yaml
+++ b/.github/workflows/00-example-01.yaml
@@ -1,14 +1,35 @@
-name: 00 - Github actions playground - Example 01
+name: 00 - Github Actions Playground - Python Example
 on:
-  workflow_dispatch:
+  workflow_dispatch:  
 
 jobs:
-  check-bats-version:
-    runs-on: ubuntu-latest
+  python-example:
+    runs-on: ubuntu-latest 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+          python-version: '3.10'
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt || echo "No requirements file"
+
+      - name: Run Python Script
+        run: |
+          echo "🐍 Running Python Script"
+          python -c "print('Hello from Python! 🚀')"
+
+      - name: Run Python Linter (flake8)
+        run: |
+          pip install flake8
+          flake8 . || echo "Linting issues detected, but continuing..."
+
+      - name: Run Tests (pytest)
+        run: |
+          pip install pytest
+          pytest || echo "Tests completed with issues"
