--- a/.github/workflows/01-linux-commands.yaml
+++ b/.github/workflows/01-linux-commands.yaml
@@ -12,20 +12,20 @@ jobs:
         
       - name: Print Operating System Info
         run: |
-          echo "Este comando imprime informações sobre o sistema operacional."
+          echo "This command prints info about the s.o."
           uname -a
           
       - name: List Files in Current Directory
         run: |
-          echo "Este comando lista todos os arquivos no diretório atual."
+          echo "This command list Files in Current Directory."
           ls -l
           
       - name: Print Current Working Directory
         run: |
-          echo "Este comando imprime o diretório de trabalho atual."
+          echo "Print Current Working Directory."
           pwd
           
       - name: Print Environment Variables
         run: |
-          echo "Este comando imprime as variáveis de ambiente."
+          echo "Print Environment Variables."
           printenv
