--- a/.github/workflows/06-composite-action.yaml
+++ b/.github/workflows/06-composite-action.yaml
@@ -8,8 +8,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Usar Composite Action
-        uses: ./.github/actions/my-composite-action
+        uses: ./actions/my-composite-action
         with:
           name: 'GitHub User'
 
