--- a/.github/workflows/07-matrix-example.yaml
+++ b/.github/workflows/07-matrix-example.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [14, 16, 18]
+        node-version: [16, 18]
         exclude: 
           - os: windows-latest
             node-version: 18
@@ -25,6 +25,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          architecture: x64
 
       - name: Install dependencies
         run: npm install
