--- a/.github/workflows/07-matrix-example.yaml
+++ b/.github/workflows/07-matrix-example.yaml
@@ -16,7 +16,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Shows environment 
-        run: echo "Environment Deployment: ${{ matrix.environment }}"
+        run: |
+          echo "Environment Deployment: ${{ matrix.environment }}"
+
 
       - name: Execute deployment script
         run: |
