--- a/.github/workflows/09-java-script-java-action.yaml
+++ b/.github/workflows/09-java-script-java-action.yaml
@@ -16,4 +16,5 @@ jobs:
           name: "GitHub User"
 
       - name: Mostrar mensagem gerada
-        run: echo "Saudação: ${{ steps.output.outputs.greeting }}"
+        run: |
+          echo "Greeting: ${{ steps.output.outputs.greeting }}"
