--- a/.github/workflows/09-java-script-java-action.yaml
+++ b/.github/workflows/09-java-script-java-action.yaml
@@ -11,10 +11,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Executar JavaScript Action
+        id: generate-greeting
         uses: ./actions/java-script-action
         with:
           name: "GitHub User"
 
       - name: Mostrar mensagem gerada
         run: |
-          echo "Greeting: ${{ steps.output.outputs.greeting }}"
+          echo "Greeting: ${{ steps.generate-greeting.outputs.greeting }}"
